# Totally-Not-A-Virus

./: .gitignore  README.md
Backend/: .htaccess  ctrl.css  ctrl.html  ctrl.js  ctrl.php  put_data.php
Backend/ctrl/: ctrl.css  ctrl.html  ctrl.js  ctrl.php
Client/: CMakeLists.txt
Client/Scripts/: Prebuild.bat
Client/src/: Command.h  CommandExe.cpp  CommandExe.h  CommandMessageBox.cpp  CommandMessageBox.h  Command_batch.cpp  Command_batch.h  Command_dl.cpp  Command_dl.h  Command_exec.cpp  Command_exec.h  Command_exit.cpp  Command_exit.h  Command_info.cpp  Command_info.h  Command_ls.cpp  Command_ls.h  Command_msgbox.cpp  Command_msgbox.h  Command_photo.cpp  Command_photo.h  Command_remove.cpp  Command_remove.h  Command_screenshot.cpp  Command_screenshot.h  Hax.cpp  ImageUtils.cpp  ImageUtils.h  Info.cpp  Info.h  Installer.cpp  Installer.h  Keylogger.cpp  Keylogger.h  Logger.cpp  Logger.h  Main.cpp  Network.cpp  Network.h  Screenshot.h  (+8 more)
Hax/: Hax.sln
Hax/Hax/: CommandExe.cpp  CommandExe.h  Hax.cpp  Hax.h  Hax.vcxproj  Hax.vcxproj.filters  Info.cpp  Info.h  Installer.h  Keylogger.cpp  Keylogger.h  Network.cpp  Network.h  Screenshot.cpp  Screenshot.h  Settings.h  Util.cpp  Util.h  stdafx.h
Server/: p.php  put_data.php
Server/ctrl/: .htaccess  .htpasswd  ctrl.css  ctrl.html  ctrl.js  ctrl.php
